--- a/.github/workflows/pr-activity.yml
+++ b/.github/workflows/pr-activity.yml
@@ -8,13 +8,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: ankur12-1610/pull-request-action@polyglot
-        with:
-          GIPHY_TOKEN: ${{ secrets.GIPHY_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          COMMENT_TEXT: 'thanks for submitting a pull request! We will try to review it as soon as we can :)'
-          PR_REACTION: 'rocket' 
-          GIPHY_TOPIC: 'Thanks a lot' 
-          TAG_AUTHOR: true 
-          ASSIGN_TO_AUTHOR: true 
+       - uses: actions/github-script@0.3.0
+         if: github.event_name == 'pull_request'
+         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+           const { issue: { number: issue_number }, repo: { owner, repo }  } = context;
+           github.issues.createComment({ issue_number, owner, repo, body: `{author}` + `thanks for submitting a pull request! We will try to review it as soon as we can :)` });
