--- a/.github/workflows/pr-activity.yml
+++ b/.github/workflows/pr-activity.yml
@@ -15,7 +15,7 @@ jobs:
           script: |
            const creator = context.payload.sender.login
            const { issue: { number: issue_number }, repo: { owner, repo }  } = context;
-           github.issues.createComment({ issue_number, owner, repo, body: creator + `thanks for submitting a pull request! We will try to review it as soon as we can :)` });
+           github.issues.createComment({ issue_number, owner, repo, body: `@` + creator + ` thanks for submitting a pull request! We will try to review it as soon as we can :)` });
   
   assignAuthor:
     runs-on: ubuntu-latest
