--- a/.github/workflows/pr-activity.yml
+++ b/.github/workflows/pr-activity.yml
@@ -26,7 +26,7 @@ jobs:
           repo-token: '${{ secrets.GITHUB_TOKEN }}'
           
   addPRreaction:
-    runs-on: ubunut-latest
+    runs-on: ubunutu-latest
     steps:
       - uses: actions/github-script@v5
         with:
