--- a/.github/workflows/pr-activity.yml
+++ b/.github/workflows/pr-activity.yml
@@ -24,6 +24,14 @@ jobs:
         if: github.event_name == 'pull_request' && github.event.action == 'opened'
         with:
           repo-token: '${{ secrets.GITHUB_TOKEN }}'
+  
+  addPRgif:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: koushikmohan1996/action-pr-gifs@master
+        with:
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
           
   addPRreaction:
     runs-on: ubunutu-latest
