--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ployglot-js",
+  "name": "ployglot",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -16,5 +16,24 @@
     "happy-dom": "^2.28.0",
     "vite": "^2.7.2",
     "vitest": "^0.2.0"
+  },
+  "description": "<div align=\"center\">   <img alt=\"HG_LOGO\" src=\"assets/js.png\" height=\"64\" /> </div>",
+  "main": "main.js",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/abhinav-0401/Polyglot_JS.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/abhinav-0401/Polyglot_JS/issues"
+  },
+  "homepage": "https://github.com/abhinav-0401/Polyglot_JS#readme",
+  "dependencies": {
+    "yarn": "^1.22.17"
   }
 }
